--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -68,8 +68,8 @@ myPugin:
   uploaderPath:
     rootPath: /home
     locationPath: /uploaderPath/img
-  projectName: freerideProject
-  projectDomainUrl: http://183.230.148.106:8080
+  projectName: javacvProject
+  projectDomainUrl: http://183.230.148.106:8084
   shiro:
     anon:
       locations: / , /*.txt  , /swagger-resources/** , /swagger-ui.html , /webjars/** , /v2/** , /home/** , /resources/** ,/uploaderPath/**
