--- a/src/main/resources/loadFFmpeg.properties
+++ b/src/main/resources/loadFFmpeg.properties
@@ -1,6 +1,7 @@
 #ffmpeg执行路径，一般为ffmpeg的安装目录，该路径只能是目录，不能为具体文件路径，否则会报错
-#path=D:/java/流媒体/ffmpeg/ffmpeg-4.1-win64-static/bin
-path=E:/YaYao/javacv/nativepk/win64/
+#path=/home/ffmpeg/
+#path=E:/YaYao/javacv/nativepk/win64/
+path=E:/nieyue/IntelliJIDE/work/javacv/nativepk/win64/
 #存放任务的默认Map的初始化大小
 size=10
 #事件回调通知接口地址
