--- a/src/main/java/com/nieyue/ffch4j/config/defaultFFmpegConfig.properties
+++ b/src/main/java/com/nieyue/ffch4j/config/defaultFFmpegConfig.properties
@@ -1,5 +1,5 @@
 #ffmpeg执行路径，一般为ffmpeg的安装目录，该路径只能是目录，不能为具体文件路径，否则会报错
-path=E:/YaYao/javacv/nativepk/win64/
+path=/home/ffmpeg/
 #是否启用默认的ffmpeg，如果启用默认ffmpeg，上面配置的path就没有用了
 defaultpathEnable=true
 #存放任务的默认Map的初始化大小
@@ -11,5 +11,5 @@ timeout=300
 #开启保活线程
 keepalive=true
 #是否输出debug消息
-debug=true
+debug=false
 
