--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -61,6 +61,8 @@ spring:
         max-idle: 300
         max-active: 800
 myPugin:
+  #发送更新 1发送，2不发送
+  isSendLive: 1
   jmx:
     rmi:
       hostname: 127.0.0.1
@@ -69,7 +71,7 @@ myPugin:
     rootPath: /home
     locationPath: /uploaderPath/img
   projectName: javacvProject
-  projectDomainUrl: http://123.144.164.72:8084
+  projectDomainUrl: http://127.0.0.1:8084
   shiro:
     anon:
       locations: / , /*.txt  , /swagger-resources/** , /swagger-ui.html , /webjars/** , /v2/** , /home/** , /resources/** ,/uploaderPath/**
